--- a/Game/CartonProject/Assembly-CSharp.csproj
+++ b/Game/CartonProject/Assembly-CSharp.csproj
@@ -45,11 +45,17 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\Code\Player\Player.cs" />
-     <Compile Include="Assets\Code\Player\Player_Moves_Behaviour.cs" />
      <Compile Include="Assets\Code\Units\Action_Behaviour.cs" />
      <Compile Include="Assets\Code\Units\Classe.cs" />
      <Compile Include="Assets\Code\Units\Moves_Behaviour.cs" />
+     <Compile Include="Assets\Code\Units\Non_Player\Guard\Guard.cs" />
+     <Compile Include="Assets\Code\Units\Non_Player\Guard\Guard_Action_Behaviour.cs" />
+     <Compile Include="Assets\Code\Units\Non_Player\Guard\Guard_Moves_Behaviour.cs" />
+     <Compile Include="Assets\Code\Units\Non_Player\Non_Player_Action_Behaviour.cs" />
+     <Compile Include="Assets\Code\Units\Non_Player\Non_Player_Moves_Behaviour.cs" />
+     <Compile Include="Assets\Code\Units\Non_Player\Unit_Non_Player.cs" />
+     <Compile Include="Assets\Code\Units\Player\Player.cs" />
+     <Compile Include="Assets\Code\Units\Player\Player_Moves_Behaviour.cs" />
      <Compile Include="Assets\Code\Units\Race.cs" />
      <Compile Include="Assets\Code\Units\Unit.cs" />
  <Reference Include="UnityEngine.UI">
