--- a/Game/CartonProject/Assembly-CSharp.csproj
+++ b/Game/CartonProject/Assembly-CSharp.csproj
@@ -55,6 +55,7 @@
      <Compile Include="Assets\Code\Units\Non_Player\Non_Player_Moves_Behaviour.cs" />
      <Compile Include="Assets\Code\Units\Non_Player\Unit_Non_Player.cs" />
      <Compile Include="Assets\Code\Units\Player\Player.cs" />
+     <Compile Include="Assets\Code\Units\Player\Player_Action_Behaviour.cs" />
      <Compile Include="Assets\Code\Units\Player\Player_Moves_Behaviour.cs" />
      <Compile Include="Assets\Code\Units\Race.cs" />
      <Compile Include="Assets\Code\Units\Unit.cs" />
