--- a/Game/CartonProject/Assembly-CSharp.csproj
+++ b/Game/CartonProject/Assembly-CSharp.csproj
@@ -49,6 +49,9 @@
      <Compile Include="Assets\Code\GUI\HUD\Caracter_HUD.cs" />
      <Compile Include="Assets\Code\GUI\HUD\HUD.cs" />
      <Compile Include="Assets\Code\GUI\HUD\Pointer_HUD.cs" />
+     <Compile Include="Assets\Code\GUI\dialogue_HUD\Dialogue.cs" />
+     <Compile Include="Assets\Code\GUI\dialogue_HUD\Dialogue_HUD.cs" />
+     <Compile Include="Assets\Code\GUI\dialogue_HUD\Speaker_Name.cs" />
      <Compile Include="Assets\Code\Units\Action_Behaviour.cs" />
      <Compile Include="Assets\Code\Units\Classe.cs" />
      <Compile Include="Assets\Code\Units\Moves_Behaviour.cs" />
